--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "resend": "^4.2.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
@@ -58,7 +59,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "prisma": "^6.5.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.1",
     "tsx": "^4.19.3",
     "typescript": "^5"
   }
